--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -325,7 +325,7 @@ hr {
 
 //  Resume //
 .resume {
-  h2 { margin: 8rem 0 2rem; }
+  h2 { margin: 0 0 2rem; }
   h3 { margin-top: 5rem; }
   h3, h4 { text-align: center; }
   section { margin-top: 100px; }
@@ -364,7 +364,7 @@ hr {
 
 
 // Contact //
-.about { margin-top: 100px; }
+.about { margin-top: 8em; }
 
 
 // All Projects //
