--- a/assets/style/_buttons.scss
+++ b/assets/style/_buttons.scss
@@ -2,7 +2,7 @@ $button-stroke: inset 0 0 0 2px;
 
 .button-wrapper {
   padding: .5em 0 !important;
-  margin-bottom: 40px;
+  margin-top: 40px;
   text-align: center;
 }
 
