--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -6,7 +6,7 @@ html {
 
 .button-wrapper {
   padding: .5em 0 !important;
-  margin-bottom: 40px;
+  margin-top: 40px;
   text-align: center; }
 
 .basic-button,
@@ -448,7 +448,7 @@ h3 {
   font-family: "Lusitana", serif;
   font-size: 3.2em;
   font-weight: 700;
-  line-height: 2.3em;
+  line-height: 1.3em;
   color: #799299; }
 
 h4 {
@@ -558,11 +558,11 @@ hr {
   max-width: 800px;
   margin: .5rem auto 2rem; }
   #featuredProjects img {
-    width: 40px;
+    width: 80px;
     margin: 10px auto 0;
     display: block; }
   #featuredProjects .square {
-    width: 30px; }
+    width: 50px; }
   #featuredProjects p {
     font-size: 1.4em;
     line-height: 1.6em;
@@ -578,40 +578,21 @@ hr {
   max-width: 800px;
   margin: 0 auto; }
 
-.resume h2 {
-  margin: 0 0 2rem; }
-.resume h3 {
-  margin-top: 5rem; }
 .resume h3, .resume h4 {
   text-align: center; }
 .resume section {
-  margin-top: 100px; }
+  margin-top: 60px; }
+.resume .button-wrapper {
+  margin: 0 0 20px; }
+.resume .flex-boxes {
+  margin-top: 2em; }
 .resume .flex-box h3 {
   margin-top: 0; }
-.resume #fellow img, .resume #vis img, .resume #intern img {
-  max-width: 65px;
-  margin: 0 auto;
-  padding-top: 13rem;
-  display: block; }
-.resume #fellow .project, .resume #vis .project, .resume #intern .project {
-  height: 170px;
-  background: none; }
-.resume #fellow {
-  background: url("../../images/resume-fellow.png") no-repeat center top;
-  background-size: 100%;
-  background-clip: content-box; }
-  .resume #fellow img {
-    padding-top: 15rem; }
-.resume #vis {
-  background: url("../../images/resume-vis.png") no-repeat center top;
-  background-size: 100%;
-  background-clip: content-box;
-  margin-top: 4rem; }
-.resume #intern {
-  background: url("../../images/resume-intern.png") no-repeat center top;
-  background-size: 100%;
-  background-clip: content-box;
-  margin-top: 4rem; }
+.resume .experience {
+  margin: 6em 0; }
+  .resume .experience svg {
+    margin: 0 auto;
+    display: block; }
 
 .about {
   margin-top: 8em; }
@@ -658,9 +639,9 @@ hr {
         display: block;
         width: 100%; }
     .flex-boxes .flex-box h3 {
-      font-size: 2.2em;
-      line-height: 1.5em;
-      margin: 1em; }
+      font-size: 2.8em;
+      line-height: 1.2em;
+      margin: .5em; }
     .flex-boxes .flex-box a:link, .flex-boxes .flex-box a:active, .flex-boxes .flex-box a:visited {
       color: #333;
       line-height: 1.5em;
