--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -179,7 +179,7 @@ h3 {
   font-family: $serif;
   font-size: 3.2em;
   font-weight: 700;
-  line-height: 2.3em;
+  line-height: 1.3em;
   color: $accent-color;
 }
 
@@ -298,11 +298,11 @@ hr {
   max-width: 800px;
   margin: .5rem auto 2rem;
   img {
-    width: 40px;
+    width: 80px;
     margin: 10px auto 0;
     display: block;
   }
-  .square { width: 30px; }
+  .square { width: 50px; }
   p {
     font-size: 1.4em;
     line-height: 1.6em;
@@ -325,40 +325,17 @@ hr {
 
 //  Resume //
 .resume {
-  h2 { margin: 0 0 2rem; }
-  h3 { margin-top: 5rem; }
   h3, h4 { text-align: center; }
-  section { margin-top: 100px; }
+  section { margin-top: 60px; }
+  .button-wrapper { margin: 0 0 20px; }
+  .flex-boxes { margin-top: 2em; }
   .flex-box { h3 { margin-top: 0; } }
-  #fellow, #vis, #intern {
-    img {
-      max-width: 65px;
+  .experience {
+    margin: 6em 0;
+    svg {
       margin: 0 auto;
-      padding-top: 13rem;
       display: block;
     }
-    .project {
-      height: 170px;
-      background: none;
-    }
-  }
-  #fellow {
-    background: url("../../images/resume-fellow.png") no-repeat center top;
-    background-size: 100%;
-    background-clip: content-box;
-    img { padding-top: 15rem; }
-  }
-  #vis {
-    background: url("../../images/resume-vis.png") no-repeat center top;
-    background-size: 100%;
-    background-clip: content-box;
-    margin-top: 4rem;
-  }
-  #intern {
-    background: url("../../images/resume-intern.png") no-repeat center top;
-    background-size: 100%;
-    background-clip: content-box;
-    margin-top: 4rem;
   }
 }
 
@@ -413,9 +390,9 @@ hr {
       }
     }
     h3 {
-      font-size: 2.2em;
-      line-height: 1.5em;
-      margin: 1em;
+      font-size: 2.8em;
+      line-height: 1.2em;
+      margin: .5em;
     }
     a:link, a:active, a:visited{
       color: $dark-gray;
