--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -617,6 +617,9 @@ hr {
     clear: both;
     content: "";
     display: table; }
+  @media screen and (min-width: 30em) {
+    .flex-boxes {
+      width: 100%; } }
   .flex-boxes .flex-box {
     max-width: 350px;
     align-self: stretch;
