--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -426,7 +426,8 @@ h2 {
   font-size: 2.4em;
   font-weight: 400;
   line-height: 1.3em;
-  margin-bottom: 0.2em;
+  max-width: 1300px;
+  margin: 0 auto 0.2em;
   padding: 0 .5em;
   text-align: center;
   color: #799299; }
