--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -453,7 +453,6 @@ h4 {
   font-family: "Lusitana", serif;
   font-size: 2.5em;
   font-weight: 400;
-  text-align: center;
   color: #799299;
   margin: .5em 0; }
 
@@ -660,7 +659,9 @@ hr {
 
 @media screen and (min-width: 53.75em) {
   .exygy ul.navigation-menu, .ideo ul.navigation-menu {
-    width: 570px; } }
+    width: 708px; } }
+.exygy #experience h4, .exygy p, .exygy #featuredProjects h3, .ideo #experience h4, .ideo p, .ideo #featuredProjects h3 {
+  text-align: center; }
 
 .projects .project {
   max-width: 800px;
