--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -380,7 +380,7 @@ header {
 #secondary #svg-bg {
   margin-top: -10px; }
 
-#experience h4, p, #featuredProjects h3 {
+#experience h4, #featuredProjects h3 {
   text-align: center; }
 
 .hide {
@@ -476,8 +476,9 @@ small {
 .centered {
   text-align: center; }
 
-hr {
-  width: 3em; }
+.space {
+  width: 100%;
+  height: 5em; }
 
 .navigation {
   background-color: #ffffff;
@@ -665,6 +666,25 @@ hr {
 @media screen and (min-width: 53.75em) {
   .exygy ul.navigation-menu, .ideo ul.navigation-menu {
     width: 708px; } }
+
+.process {
+  margin: 2em 0; }
+  .process h4 {
+    width: 100%;
+    margin-top: 0; }
+  .process ul {
+    max-width: 480px;
+    float: left; }
+  .process .imgCont {
+    width: 250px;
+    height: 200px;
+    overflow: hidden;
+    display: inline-block;
+    margin: 0 auto 1em; }
+    .process .imgCont img {
+      display: block;
+      width: 100%;
+      margin-left: 1em; }
 
 .projects .project {
   max-width: 800px;
